add first letter checking

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
   <body>
   <div class="jumbotron">Pig Latin Translator</div>
   <div class="container">
-  <form class="form in-line">
+  <form class="form in-line" id="englishInput">
     <label for="english">Please enter the word or sentence that you would like translated</label>
     <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="english" placeholder="enter word to be translated">
+    <button type="submit" class="btn btn-primary">Translate</button>
   </form>
   <div class="result">
-    In pig latin you would say ...<span id="result"> </span>
-  </div>  
+    In pig latin you would say ...<span id="VowStart"> </span>
+  </div>
   </div>
   </body>
 </html>
