--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button type="submit" class="btn btn-primary">Translate</button>
   </form>
   <div class="result">
-    In pig latin you would say ...<span id="VowStart"> </span>
+    In pig latin you would say ...<span id="answer"> </span>
   </div>
   </div>
   </body>
